--- a/st_mgt/templates/users/student_dashboard.html
+++ b/st_mgt/templates/users/student_dashboard.html
@@ -120,8 +120,16 @@
 
         <!-- Grades -->
         <div class="card">
-            <div class="card-header">
-                <h5 class="card-title"><i class="bi bi-award me-2"></i>Grades</h5>
+            <div class="card-header d-flex justify-content-between align-items-center">
+                <h5 class="card-title mb-0"><i class="bi bi-award me-2"></i>Grades</h5>
+                <div class="export-buttons">
+                    <a href="{% url 'export_student_grades_csv' student.id %}" class="export-button">
+                        <i class="bi bi-file-earmark-spreadsheet me-1"></i>Export CSV
+                    </a>
+                    <a href="{% url 'export_student_grades_pdf' student.id %}" class="export-button">
+                        <i class="bi bi-file-earmark-pdf me-1"></i>Export PDF
+                    </a>
+                </div>
             </div>
             <div class="card-body">
                 <ul class="list-group list-group-flush">
