Fixed task management by faculty

--- a/st_mgt/templates/users/faculty_dashboard.html
+++ b/st_mgt/templates/users/faculty_dashboard.html
@@ -167,7 +167,7 @@
                                             </div>
                                         {% endif %}
                                     {% endwith %}
-                                    <a href="{% url 'manage_task' task.id %}" class="btn btn-primary btn-sm">
+                                    <a href="{% url 'manage_faculty_tasks' %}" class="btn btn-primary btn-sm">
                                         <i class="bi bi-gear me-1"></i>Manage
                                     </a>
                                 </div>
