--- a/st_mgt/templates/courses/course_list.html
+++ b/st_mgt/templates/courses/course_list.html
@@ -117,7 +117,7 @@
     {% endif %}
 
     <div class="back-link-container">
-        <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to admin_dashboard</a>
+        <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to admin dashboard</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
