--- a/st_mgt/templates/faculty/manage_faculty.html
+++ b/st_mgt/templates/faculty/manage_faculty.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="back-link-container">
-            <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to admin_dashboard</a>
+            <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to admin dashboard</a>
         </div>
     </div>
 
