--- a/st_mgt/templates/students/student_list.html
+++ b/st_mgt/templates/students/student_list.html
@@ -125,7 +125,7 @@
     </div>
 
     <div class="back-link-container">
-        <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to admin_dashboard</a>
+        <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to admin dashboard</a>
     </div>
     <script>
         function toggleMenu() {
