--- a/st_mgt/templates/tasks/task_list.html
+++ b/st_mgt/templates/tasks/task_list.html
@@ -183,7 +183,7 @@
         {% endfor %}
     </table>
     <div class="back-link-container">
-        <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to admin_dashboard</a>
+        <a href="{% url 'admin_dashboard' %}" class="back-link">← Back to admin dashboard</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
